--- a/index.html
+++ b/index.html
@@ -7,48 +7,31 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>xiaolan</title>
 		<link rel="stylesheet" href="css/style.css" />
-		<script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
+		<link rel="stylesheet" href="css/index.css" />
 	</head>
 
 	<body>
 
-		<!--加载动画-->
 		
-		<div id="loading">
-			<div id="loading-center">
-				<div id="loading-center-absolute">
-					<div id="object"></div>
-				</div>
-			</div>
-		</div>
-
-		<!--加载动画-->
 
 		<!--背景动画-->
-		
 		<canvas></canvas>
-        <div id="web" style="position:fixed; z-index:1;top: 100px;
-        margin:0 auto;
-    width: 200px;
-    height: 500px;
-    line-height: 500px;
-    text-align: center;
-    border: 1px solid #000;
-    background-color: #FFF;">
-			<div id="top" style="width:100px; height:100px;">aaaaaaaaa</div>
-			<div id="head">aaaa</div>
-			<div id="bot">aaaaa</div>
+        <div id="web">
+        	<div id="top_logo">
+        		<img class="logo-item" title="百度搜索" alt="百度搜索" src="https://res.hao1258.com/styles/front/img/search/baidu-white.png"></img>
+        	</div>
+			<form id="top">
+				<span id="search">
+					<input id="search_1">
+				</span>
+				<button type="submit" class="search-button-box" title="搜索">
+					<i tabindex="2" class="search-button"></i>
+				</button>
+			</form>
 		</div>
 		<script type="text/javascript" src="js/bj.js"></script>
-		
 		<!--背景动画-->
 
-		<div id="web">
-			<div id="top">aaaaaaaaa</div>
-			<div id="head">aaaa</div>
-			<div id="bot">aaaaa</div>
-		</div>
 	</body>
 
 </html>
