--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>xiaolan</title>
+		<link rel="Shortcut icon" href="Logo.ico">
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
