--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>xiaolan</title>
 		<link rel="Shortcut icon" href="Logo.ico">
+		<link rel="stylesheet" type="text/css" href="css/default.css">
+		<link rel="stylesheet" type="text/css" href="css/search-form.css">
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
@@ -21,19 +23,26 @@
         	<div id="top_logo">
         		<img class="logo-item" title="百度搜索" alt="百度搜索" src="img/baidu-white.png"></img>
         	</div>
-			<form id="top">
-				<span id="search">
-					<input id="search_1">
-				</span>
-				<button type="submit" class="search-button-box" title="搜索">
-					<i tabindex="2" class="search-button"></i>
-				</button>
-			</form>
+        	<!--搜索框-->
+			<form onsubmit="submitFn(this, event);">
+		        <div class="search-wrapper">
+			        <div class="input-holder">
+				        <input type="text" class="search-input" placeholder="Type to search" />
+				    <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
+			        </div>
+			    <span class="close" onclick="searchToggle(this, event);"></span>
+			        <div class="result-container">
+			        </div>
+		        </div>
+	        </form>
+	        <script src="js/jquery-2.0.2.min.js" type="text/javascript"></script>
+	        <script type="text/javascript" src="js/search.js"></script>
+	        <!--搜索框-->
 		</div>
 		<div id="bot">
 			<div id="music">
 				<audio controls="controls">
-                    <source src="王依丹 - 病变.mp3" />
+                    <source src="http://picosong.com/media/songs/8a9ba8dd876f225f6ce398ab86f16143.mp3" />
                 </audio>
 			</div>
 			<div id="github" onclick="window.open('https://github.com/xiaolanqqai/xiaolanqqai.github.io','_self')"><svg height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
