--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			        </div>
 		        </div>
 	        </form>
-	        <script src="js/jquery-2.0.2.min.js" type="text/javascript"></script>
-	        <script type="text/javascript" src="js/search.js"></script>
+	        <script src="https://ajax.microsoft.com/ajax/jquery/jquery-3.3.1.min.js"></script>
+	        <script src="js/search.js"></script>
 	        <!--搜索框-->
 		</div>
 		<div id="bot">
