--- a/index.html
+++ b/index.html
@@ -36,9 +36,27 @@
 		        </div>
 	        </form>
 	        <script src="https://ajax.microsoft.com/ajax/jquery/jquery-3.3.1.min.js"></script>
-	        <script src="js/search.js"></script>
+	        <script type="text/javascript" src="js/search.js"></script>
 	        <!--搜索框-->
 		</div>
+		<!--快捷搜索栏-->
+		<div id="kj">
+			<div id="kj_z">
+				<ul>
+					<li class="kj_li"><a class="kj_a" href="https://www.bilibili.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/bilibili.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://v.qq.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/tx.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://http://www.iqiyi.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/aqy.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://http://www.youku.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/yk.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.taobao.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/tb.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.jd.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/jd.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://mail.163.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/163.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://weibo.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://wx2.qq.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/wx.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.zhihu.com/explore" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/zh.png);"></div>哔哩哔哩</a></li>
+				</ul>
+			</div>
+		</div>
+		<!--快捷搜索栏-->
 		<div id="bot">
 			<div id="music">
 				<audio controls="controls">
