--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<div id="kj_z">
 				<ul>
 					<li class="kj_li"><a class="kj_a" href="https://www.bilibili.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/bilibili.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="http://www.dilidili.name/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/dilidili.png);"></div>嘀哩嘀哩</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://v.qq.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/tx.png);"></div>腾讯视频</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://http://www.iqiyi.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/aqy.png);"></div>爱奇艺</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://http://www.youku.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/yk.png);"></div>优酷</a></li>
@@ -53,6 +54,9 @@
 					<li class="kj_li"><a class="kj_a" href="https://weibo.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>新浪微博</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://wx2.qq.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/wx.png);"></div>微信</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://www.zhihu.com/explore" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/zh.png);"></div>知乎</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://translate.google.cn" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/fy.png);"></div>谷歌翻译</a></li>
+					<li class="kj_li"><a class="kj_a" href="http://www.zdfans.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/zd423.png);"></div>zd423</a></li>
+					<li class="kj_li"><a class="kj_a" href="http://www.htmleaf.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/jq.png);"></div>jQuery之家</a></li>
 				</ul>
 			</div>
 		</div>
