--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 					<li class="kj_li"><a class="kj_a" href="https://translate.google.cn" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/fy.png);"></div>谷歌翻译</a></li>
 					<li class="kj_li"><a class="kj_a" href="http://www.zdfans.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/zd423.png);"></div>zd423</a></li>
 					<li class="kj_li"><a class="kj_a" href="http://www.htmleaf.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/jq.png);"></div>jQuery之家</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://pan.baidu.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/wp.png);"></div>百度网盘</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.iconfont.cn/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/icon.png);"></div>iconfont</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.easyicon.net/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/easyicon.png);"></div>easyicon</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.58pic.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>千图网</a></li>
 				</ul>
 			</div>
 		</div>
