--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
 		<div id="kj">
 			<div id="kj_z">
 				<ul>
-					<li class="kj_li"><a class="kj_a" href="https://www.bilibili.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/bilibili.png);"></div>哔哩哔哩</a></li>
-					<li class="kj_li"><a class="kj_a" href="http://www.dilidili.name/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/dilidili.png);"></div>嘀哩嘀哩</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://v.qq.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/tx.png);"></div>腾讯视频</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://http://www.iqiyi.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/aqy.png);"></div>爱奇艺</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://http://www.youku.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/yk.png);"></div>优酷</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://www.taobao.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/tb.png);"></div>淘宝</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://www.jd.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/jd.png);"></div>京东</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://mail.163.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/163.png);"></div>163邮箱</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://weibo.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>新浪微博</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://wx2.qq.com" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/wx.png);"></div>微信</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://www.zhihu.com/explore" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/zh.png);"></div>知乎</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://translate.google.cn" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/fy.png);"></div>谷歌翻译</a></li>
-					<li class="kj_li"><a class="kj_a" href="http://www.zdfans.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/zd423.png);"></div>zd423</a></li>
-					<li class="kj_li"><a class="kj_a" href="http://www.htmleaf.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/jq.png);"></div>jQuery之家</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://pan.baidu.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/wp.png);"></div>百度网盘</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://www.iconfont.cn/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/icon.png);"></div>iconfont</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://www.easyicon.net/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/easyicon.png);"></div>easyicon</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://www.58pic.com/" rel="nofollow"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>千图网</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.bilibili.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/bilibili.png);"></div>哔哩哔哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="http://www.dilidili.name/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/dilidili.png);"></div>嘀哩嘀哩</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://v.qq.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/tx.png);"></div>腾讯视频</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://http://www.iqiyi.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/aqy.png);"></div>爱奇艺</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://http://www.youku.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/yk.png);"></div>优酷</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.taobao.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/tb.png);"></div>淘宝</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.jd.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/jd.png);"></div>京东</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://mail.163.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/163.png);"></div>163邮箱</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://weibo.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>新浪微博</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://wx2.qq.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wx.png);"></div>微信</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.zhihu.com/explore" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/zh.png);"></div>知乎</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://translate.google.cn" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/fy.png);"></div>谷歌翻译</a></li>
+					<li class="kj_li"><a class="kj_a" href="http://www.zdfans.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/zd423.png);"></div>zd423</a></li>
+					<li class="kj_li"><a class="kj_a" href="http://www.htmleaf.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/jq.png);"></div>jQuery之家</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://pan.baidu.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wp.png);"></div>百度网盘</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.iconfont.cn/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/icon.png);"></div>iconfont</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.easyicon.net/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/easyicon.png);"></div>easyicon</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.58pic.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>千图网</a></li>
 				</ul>
 			</div>
 		</div>
