--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<form onsubmit="submitFn(this, event);">
 		        <div class="search-wrapper">
 			        <div class="input-holder">
-				        <input type="text" class="search-input" placeholder="Type to search" />
+				        <input type="text" id="text" class="search-input" placeholder="Type to search" />
 				    <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
 			        </div>
 			    <span class="close" onclick="searchToggle(this, event);"></span>
