--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
 			<form onsubmit="submitFn(this, event);">
 		        <div class="search-wrapper">
 			        <div class="input-holder">
-				        <input type="text" id="text" class="search-input" placeholder="Type to search" />
+				        <input type="text" id="txt" class="search-input" placeholder="Type to search" />
 				    <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
 			        </div>
 			    <span class="close" onclick="searchToggle(this, event);"></span>
 			        <div class="result-container">
 			        </div>
 		        </div>
+		        <div id="search_ajx"><ul id="list"></ul></div>
 	        </form>
+	        
 	        <script src="https://ajax.microsoft.com/ajax/jquery/jquery-3.3.1.min.js"></script>
 	        <script type="text/javascript" src="js/search.js"></script>
+	        <script type="text/javascript" src="js/search_ajx.js"></script>
 	        <!--搜索框-->
 		</div>
 		<!--快捷搜索栏-->
