--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 		</div>
 		<script type="text/javascript" src="js/bj.js"></script>
 		<!--背景动画-->
+	
+	<!--输入框特效-->
+        <script src="js/activate-power-mode.js "></script>  
+        <script src="js/text.js "></script>
+        <!--输入框特效-->
 
 	</body>
 
