--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div id="bot">
 			<div id="music">
 				<audio controls="controls">
-                    <source src="music/病变.mp3" />
+                    <source src="http://www.170mv.com/kw/other.web.nc01.sycdn.kuwo.cn/resource/n2/24/9/113746495.mp3" />
                 </audio>
 			</div>
 			<div id="bot_right">
