--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>xiaolan</title>
+		<title>Xiaolan</title>
 		<link rel="Shortcut icon" href="Logo.ico">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<link rel="stylesheet" type="text/css" href="css/search-form.css">
-		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/index.css" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/index.css" />
 	</head>
 
 	<body>
@@ -58,12 +58,15 @@
 					<li class="kj_li"><a class="kj_a" href="https://wx2.qq.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wx.png);"></div>微信</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://www.zhihu.com/explore" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/zh.png);"></div>知乎</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://translate.google.cn" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/fy.png);"></div>谷歌翻译</a></li>
-					<li class="kj_li"><a class="kj_a" href="http://www.zdfans.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/zd423.png);"></div>zd423</a></li>
 					<li class="kj_li"><a class="kj_a" href="http://www.htmleaf.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/jq.png);"></div>jQuery之家</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://pan.baidu.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wp.png);"></div>百度网盘</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://www.iconfont.cn/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/icon.png);"></div>iconfont</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://www.easyicon.net/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/easyicon.png);"></div>easyicon</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://www.58pic.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>千图网</a></li>
+					<li class="kj_li"><a class="kj_a" href="http://www.zdfans.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/zd423.png);"></div>zd423</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://www.xitmi.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>系统迷</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://laod.cn//" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/zd423.png);"></div>老D博客</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://msdn.itellyou.cn//" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>MSDN</a></li>
 				</ul>
 			</div>
 		</div>
@@ -75,9 +78,11 @@
                 </audio>
 			</div>
 			<div id="bot_right">
-			    <div id="about"></div>
+			    <div id="about">
+			    	<div class="tin"></div>
+			    </div>
 			    <div id="github" onclick="window.open('https://github.com/xiaolanqqai/xiaolanqqai.github.io','_self')">
-			    	<svg height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true">
+			    	<svg height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true" fill="#ffffffbf">
 			    		<path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z">
 			    		</path>
 			    	</svg>
