--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 					<li class="kj_li"><a class="kj_a" href="https://www.appinn.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/xz.png);"></div>小众软件</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://www.xitmi.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/xtm.png);"></div>系统迷</a></li>
 					<li class="kj_li"><a class="kj_a" href="https://laod.cn//" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/ld.png);"></div>老D博客</a></li>
-					<li class="kj_li"><a class="kj_a" href="https://msdn.itellyou.cn//" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/msdn.png);"></div>MSDN</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://msdn.itellyou.cn/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/msdn.png);"></div>MSDN</a></li>
+					<li class="kj_li"><a class="kj_a" href="https://tinypng.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/ty.png);"></div>TinyPNG</a></li>
 				</ul>
 			</div>
 		</div>
