--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/hhh.css" />
-		<script type="text/javascript" src="css/hhh.js"></script>
+		<script type="text/javascript" src="js/hhh.js"></script>
 		
 	</head>
 
