--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			        <div class="result-container">
 			        </div>
 		        </div>
-		        <div id="search_ajx"><ul id="list"></ul></div>
+		        <div id="search_ajx"><ul id="list" style="display:none;"></ul></div>
 	        </form>
 	        
 	        <script type="text/javascript" src="https://ajax.microsoft.com/ajax/jquery/jquery-3.3.1.min.js"></script>
