--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 					    <li class="kj_li"><a class="kj_a" href="http://www.dilidili.name/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/dilidili.png);"></div>嘀哩嘀哩</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://v.qq.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/tx.png);"></div>腾讯视频</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.iqiyi.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/aqy.png);"></div>爱奇艺</a></li>
+					    <li class="kj_li"><a class="kj_a" href="http://www.yxdm.tv/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/aqy.png);"></div>爱奇艺</a></li>
 
 					</ul>
 				</div>
