--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 					    <li class="kj_li"><a class="kj_a" href="https://msdn.itellyou.cn/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/msdn.png);"></div>MSDN</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.xitmi.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/xtm.png);"></div>系统迷</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://laod.cn//" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/ld.png);"></div>老D博客</a></li>
+					    <li class="kj_li"><a class="kj_a" href="http://yx.bsh.me/author/aikeji" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/ld.png);"></div>异星软件</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.iconfont.cn/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/icon.png);"></div>iconfont</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.easyicon.net/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/easyicon.png);"></div>easyicon</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.58pic.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>千图网</a></li>
