--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					    <li class="kj_li"><a class="kj_a" href="http://www.dilidili.name/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/dilidili.png);"></div>嘀哩嘀哩</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://v.qq.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/tx.png);"></div>腾讯视频</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.iqiyi.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/aqy.png);"></div>爱奇艺</a></li>
-					    <li class="kj_li"><a class="kj_a" href="https://http://www.youku.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/yk.png);"></div>优酷</a></li>
+					    <li class="kj_li"><a class="kj_a" href="https://www.youku.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/yk.png);"></div>优酷</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.taobao.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/tb.png);"></div>淘宝</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.tmall.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/tb.png);"></div>天猫</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.jd.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/jd.png);"></div>京东</a></li>
