--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		        <div id="search_ajx"><ul id="list" style="display:none;"></ul></div>
 	        </form>
 	        
-	        <script type="text/javascript" src="https://ajax.microsoft.com/ajax/jquery/jquery-3.3.1.min.js"></script>
+	        <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 	        <script type="text/javascript" src="js/search.js"></script>
 	        <script type="text/javascript" src="js/search_ajx.js"></script>
 			
@@ -132,8 +132,8 @@
 		<!--背景动画-->
         
         <!--输入框特效-->
-        <script src="js/activate-power-mode.js"></script>  
-        <script src="js/text.js"></script>
+        <script type="text/javascript" src="js/activate-power-mode.js"></script>  
+        <script type="text/javascript" src="js/text.js"></script>
         <!--输入框特效-->
 	</body>
 
