--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					    <li class="kj_li"><a class="kj_a" href="https://www.tmall.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/tb.png);"></div>天猫</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.jd.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/jd.png);"></div>京东</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://weibo.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>新浪微博</a></li>
-					    <li class="kj_li"><a class="kj_a" href="https://www.jianshu.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>简书</a></li>
+					    <li class="kj_li"><a class="kj_a" href="https://www.jianshu.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/js.png);"></div>简书</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.xiaohongshu.com/explore?tab=recommend" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>小红书</a></li>
 					    
 					</ul>
