--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					    <li class="kj_li"><a class="kj_a" href="https://weibo.com" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>新浪微博</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.jianshu.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/js.png);"></div>简书</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.xiaohongshu.com/explore?tab=recommend" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wb.png);"></div>小红书</a></li>
-					    <li class="kj_li"><a class="kj_a" href="http://www.yxdm.tv/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/aqy.png);"></div>宜轩动画</a></li>
+					    <li class="kj_li"><a class="kj_a" href="http://www.yxdm.tv/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/yx.png);"></div>宜轩动画</a></li>
 					    
 					</ul>
 				
@@ -95,7 +95,7 @@
 					    <li class="kj_li"><a class="kj_a" href="https://www.iconfont.cn/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/icon.png);"></div>iconfont</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.easyicon.net/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/easyicon.png);"></div>easyicon</a></li>
 					    <li class="kj_li"><a class="kj_a" href="https://www.58pic.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>千图网</a></li>
-                                            <li class="kj_li"><a class="kj_a" href="https://www.ghpym.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/qtw.png);"></div>果核剥壳</a></li>					    
+                                            <li class="kj_li"><a class="kj_a" href="https://www.ghpym.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/gh.png);"></div>果核剥壳</a></li>					    
 
 					</ul>
 
