--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
 					<ul class="top11">
 					    <li class="kj_li"><a class="kj_a" href="https://www.chiphell.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/chh.png);"></div>chiphell</a></li>
-					    
-					    
+					    <li class="kj_li"><a class="kj_a" href="https://bbs.kafan.cn/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/kf.png);"></div>卡饭</a></li>
+					    <li class="kj_li"><a class="kj_a" href="https://www.feng.com/" rel="nofollow" target="_blank"><div class="kj_icon" style="background-image:url(img/icon/wf.png);"></div>威锋</a></li>
 
 					</ul>
 				</div>
