--- a/demo/index.html
+++ b/demo/index.html
@@ -115,7 +115,7 @@
 	<div class="z-1">
 		<div class="z-4">
 			<div id="jsi-flying-fish-container" class="w-100"></div>
-			<script src="../js/fish.js"></script>
+			<script src="js/fish.js"></script>
 		</div>
 		<canvas class="background"></canvas>
 	</div>
