--- a/demo/index/develop.html
+++ b/demo/index/develop.html
@@ -26,7 +26,11 @@
 				<a href="https://xiaolanqqai.lanzous.com/b01zx4syb" class="badge badge-light">Website update address (code:xiaolan)</a>
 			</div>
 			<div class="alert alert-success shadow" role="alert">
-				<h4 class="alert-heading">BETA 3.3.0<span class="badge badge-danger">New</span></h4>
+				<h4 class="alert-heading">BETA 3.4.1<span class="badge badge-danger">New</span></h4>
+				<h6 class="float-end">2022-11-12</h6>
+				<p>The framework updated to BOOSTRAP_v5.2.2</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.3.0<span class="badge badge-danger">New</span></h5>
 				<h6 class="float-end">2022-07-04</h6>
 				<p>The framework updated to BOOSTRAP_v5.2.0_Beta1.</p>
 				<hr class="my-2">
@@ -88,7 +92,7 @@
 		<div class="fixed-bottom mx-1">
 			<div class="container-fluid">
 				<div class="float-end">
-					<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a href="#">Beta:3.4.0</a></span>
+					<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a href="#">Beta:3.4.1</a></span>
 					<div class="spinner-grow spinner-grow-sm text-info" role="status"></div>
 				</div>
 			</div>
