--- a/demo/index/develop.html
+++ b/demo/index/develop.html
@@ -82,6 +82,7 @@
 				<a href="https://getbootstrap.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://getbootstrap.com/favicon.ico" loading="lazy"><h6 class="t1">bootstrap_v5.2</h6></a>
 				<a href="https://v5.bootcss.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://v5.bootcss.com/favicon.ico" loading="lazy"><h6 class="t1">bootstrap_v5</h6></a>
 				<a href="https://freewha.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://freewha.com/favicon.ico" loading="lazy"><h6 class="t1">FreeWHA</h6></a>
+				<a href="https://github.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://github.com/favicon.ico" loading="lazy"><h6 class="t1">github</h6></a>
 			</div>
 		</div>
 
@@ -92,7 +93,7 @@
 		<div class="fixed-bottom mx-1">
 			<div class="container-fluid">
 				<div class="float-end">
-					<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="#">Beta:3.4.1</a></span>
+					<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="#">Beta:3.4.2</a></span>
 					<div class="spinner-grow spinner-grow-sm text-info" role="status"></div>
 				</div>
 			</div>
@@ -126,7 +127,7 @@
 		});
 	</script>
 	
-	<div id="uptime2" style="display: none;">up20221112</div>
+	<div id="uptime2" style="display: none;">up20221202</div>
 
 	<script>
 		var uptime1 = document.getElementById('uptime1');
