--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -212,7 +212,7 @@
 				<div class="alert alert-secondary shadow" role="alert">论坛</div>
 					<div class="d-flex flex-wrap p-2">
 						<a href="https://dkxuanye.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://dkxuanye.cn/favicon.ico" loading="lazy"><h6 class="t1">玄烨品果</h6></a>
-						<a href="http://www.imomoe.in/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.imomoe.in/favicon.ico" loading="lazy"><h6 class="t1">樱花动漫</h6></a>
+						<a href="https://www.imomoe.in/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.imomoe.in/favicon.ico" loading="lazy"><h6 class="t1">樱花动漫</h6></a>
 						<a href="https://v.qq.com" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://v.qq.com/favicon.ico" loading="lazy"><h6 class="t1">腾讯视频</h6></a>
 						<a href="https://www.iqiyi.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.iqiyi.com/favicon.ico" loading="lazy"><h6 class="t1">爱奇艺</h6></a>
 						<a href="https://www.taobao.com" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.taobao.com/favicon.ico" loading="lazy"><h6 class="t1">淘宝</h6></a>
@@ -230,7 +230,7 @@
 			<div class="fixed-bottom mx-1">
 				<div class=" container-fluid">
 					<div class="float-end">
-						<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="../index/develop.html">Beta:3.4.1</a></span>
+						<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="../index/develop.html">Beta:3.4.2</a></span>
 						<a href="JavaScript:void(0)" onclick="jav()"><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
 					</div>
 				</div>
@@ -293,7 +293,7 @@
 
 		</script>
 		
-		<div id="uptime2" style="display: none;">up20221112</div>
+		<div id="uptime2" style="display: none;">up20221202</div><!-- 最后更新时间 -->
 
 	<script>
 		var uptime1 = document.getElementById('uptime1');
