--- a/demo/index.html
+++ b/demo/index.html
@@ -103,7 +103,7 @@
 					<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 				</div>
 				<div class="float-end">
-					<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="index/develop.html">Beta:3.4.1</a></span>
+					<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="index/develop.html">Beta:3.4.2</a></span>
 					<div class="spinner-grow spinner-grow-sm text-info" role="status"></div>
 				</div>
 			</div>
@@ -163,7 +163,7 @@
 
 	</script>
 
-	<div id="uptime2" style="display: none;">up20221112</div>
+	<div id="uptime2" style="display: none;">up20221202</div><!-- 最后更新时间 -->
 
 	<script>
 		var uptime1 = document.getElementById('uptime1');
