--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -128,7 +128,7 @@
 						<a href="https://www.qiqidongman.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.qiqidongman.com/favicon.ico" loading="lazy"><h6 class="t1">奇奇动漫</h6></a>
 						<a href="http://www.zzzfun.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.zzzfun.com/favicon.ico" loading="lazy"><h6 class="t1">zzzfun</h6></a>
 						<a href="https://www.xskdm.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.xskdm.com/favicon.ico" loading="lazy"><h6 class="t1">新时空动漫</h6></a>
-
+						<a href="https://www.cqtvm.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.cqtvm.com/favicon.ico" loading="lazy"><h6 class="t1">剧浦浦</h6></a>
 						
 						<a href="http://www.dmdm2020.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="http://www.dmdm2020.com/favicon.ico" loading="lazy"><h6 class="t1">哆咪动漫</h6></a>
 
@@ -230,7 +230,7 @@
 			<div class="fixed-bottom mx-1">
 				<div class=" container-fluid">
 					<div class="float-end">
-						<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="../index/develop.html">Beta:3.4.2</a></span>
+						<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="../index/develop.html">Beta:3.4.2</a></span>
 						<a href="JavaScript:void(0)" onclick="jav()"><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
 					</div>
 				</div>
@@ -293,7 +293,7 @@
 
 		</script>
 		
-		<div id="uptime2" style="display: none;">up20221202</div><!-- 最后更新时间 -->
+		<div id="uptime2" style="display: none;">up20221230</div><!-- 最后更新时间 -->
 
 	<script>
 		var uptime1 = document.getElementById('uptime1');
