--- a/demo/index/aa.html
+++ b/demo/index/aa.html
@@ -40,6 +40,8 @@
 						<a href="https://elsb.i6xh.news" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t1">2048xp</h6></a>
 						<a href="https://www.ncbb15.xyz/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.ncbb15.xyz/favicon.ico" loading="lazy"><h6 class="t1">嫩草影院</h6></a>
 						<a href="https://avmai.xyz/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://avmai.xyz/favicon.ico" loading="lazy"><h6 class="t1">avman</h6></a>
+						<a href="https://www.xvideos.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.xvideos.com/favicon.ico" loading="lazy"><h6 class="t1">xvideos</h6></a>
+						<a href="https://baofa-hotel.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://baofa-hotel.cn/favicon.ico" loading="lazy"><h6 class="t1">看吧影院</h6></a>
 					</div>
 			</div>
 
@@ -50,7 +52,7 @@
 			<div class="fixed-bottom mx-1">
 				<div class=" container-fluid">
 					<div class="float-end">
-						<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="../index/develop.html">Beta:3.4.2</a></span>
+						<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="../index/develop.html">Beta:3.4.3</a></span>
 						<div class="spinner-grow spinner-grow-sm text-info" role="status"></div>
 					</div>
 				</div>
@@ -125,7 +127,7 @@
 			});
 		</script>
 		
-		<div id="uptime2" style="display: none;">up20221213</div><!-- 最后更新时间 -->
+		<div id="uptime2" style="display: none;">up20230216</div><!-- 最后更新时间 -->
 
 	<script>
 		var uptime1 = document.getElementById('uptime1');
