--- a/demo/index.html
+++ b/demo/index.html
@@ -103,8 +103,8 @@
 					<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 				</div>
 				<div class="float-end">
-					<span class="badge text-black-50"><a href="https://vscode.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="index/develop.html">Beta:3.4.2</a></span>
-					<div class="spinner-grow spinner-grow-sm text-info" role="status"></div>
+					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="index/develop.html">Beta:3.4.2</a></span>
+					<a href="JavaScript:void(0)" onclick="jav()"><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
 				</div>
 			</div>
 		</div>
@@ -163,7 +163,26 @@
 
 	</script>
 
-	<div id="uptime2" style="display: none;">up20221202</div><!-- 最后更新时间 -->
+<script>
+	function jav() {
+		var na = prompt('Please enter password !!! >>>');
+		var nn = na % 10;
+		if (nn == 9) {
+			window.open("index/1.htm");
+		} else if (nn == 8) {
+			window.open("index/2.chm");
+		} else if (nn == 7) {
+			window.open("index/aa.html","_self");
+		} else {
+			alert('???');
+		}
+	};
+
+
+
+</script>
+
+	<div id="uptime2" style="display: none;">up20221220</div><!-- 最后更新时间 -->
 
 	<script>
 		var uptime1 = document.getElementById('uptime1');
@@ -180,6 +199,10 @@
 	<div style="display: none;">111</div><!-- 去广告 -->
 
 
+	<script>
+		var ban = "C:\Users\Administrator\Desktop\demo3.4.0\bann.html";
+		console.log(ban.innerText);
+	</script>
 </body>
 
 
