--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -73,7 +73,8 @@
 						<a href="https://www.remove.bg/zh" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.remove.bg/zh/favicon.ico" loading="lazy"><h6 class="t1">Remove.bg</h6></a>
 						<a href="https://imagecompressor.com/zh/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://imagecompressor.com/zh/favicon.ico" loading="lazy"><h6 class="t1">imagecompressor</h6></a>
 						<a href="https://zh.recompressor.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://zh.recompressor.com/favicon.ico" loading="lazy"><h6 class="t1">Recompressor</h6></a>
-						<a href="https://zh.recompressor.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://zh.recompressor.com/favicon.ico" loading="lazy"><h6 class="t1">Recompressor</h6></a>
+						<a href="https://www.aconvert.com/cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.aconvert.com/cn/favicon.ico" loading="lazy"><h6 class="t1">aconvert</h6></a>
+						<a href="https://jianwai.youdao.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://jianwai.youdao.com/favicon.ico" loading="lazy"><h6 class="t1">网易见外工作台</h6></a>
 					</div>
 			</div>
 
