--- a/demo/index.html
+++ b/demo/index.html
@@ -182,9 +182,11 @@
 
 </script>
 
-	<div id="uptime2" style="display: none;">up20221220</div><!-- 最后更新时间 -->
+	<div id="uptime2" style="display: none;">20221220</div><!-- 最后更新时间 -->
 
-	<script>
+	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
+			
+		<script>
 		var uptime1 = document.getElementById('uptime1');
 		var uptime2 = document.getElementById('uptime2');
 
@@ -194,15 +196,25 @@
 		uptime1.onmouseout = function (){
 			uptime2.style.display = 'none';
 		}
-	</script>
+
+		var loca_bat = uptime2.innerHTML;
+		document.getElementsByClassName('bat');
+		console.log("loca_bat="+loca_bat);
+		console.log("git_bat="+git_bat);
+		console.log(uptime1.innerHTML);
+		if(loca_bat < git_bat)
+		{
+			uptime1.style.color = 'red';
+			uptime1.innerHTML= 'This version is old';
+		}
+		else if(loca_bat >= git_bat)
+		{
+			uptime1.style.color = '';
+		}
+		</script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
 
-
-	<script>
-		var ban = "C:\Users\Administrator\Desktop\demo3.4.0\bann.html";
-		console.log(ban.innerText);
-	</script>
 </body>
 
 
